--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,4 +21,28 @@ jobs:
         run: npm run eslint
       - name: Run frontend tests
         working-directory: ./frontend
-        run: npm run test
+        run: npm test
+      - name: Build frontend
+        working-directory: ./frontend
+        run: npm run build
+      - name: Install backend dependencies
+        working-directory: ./backend
+        run: npm install
+      - name: Lint backend
+        working-directory: ./backend
+        run: npm run eslint
+      - name: Run backend tests
+        working-directory: ./backend
+        run: npm test
+      - name: Install E2E test dependencies
+        working-directory: ./e2e-tests
+        run: npm install
+      - name: Run E2E tests
+        working-directory: ./e2e-tests
+        run: npm test
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
