--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development node --watch index.js",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --no-watchman",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --no-watchman --detectOpenHandles",
     "start:test": "cross-env NODE_ENV=test node index.js",
     "eslint": "eslint './**/*.js'"
   },
