--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
+    "test:CI": "cross-env NODE_ENV=test jest --verbose --runInBand --no-watchman",
+    "production": "cross-env NODE_ENV=production-local node --watch index.js",
+    "test": "cross-env NODE_ENV=test-local jest --verbose --runInBand --no-watchman",
     "dev": "cross-env NODE_ENV=development node --watch index.js",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --no-watchman",
-    "start:test": "cross-env NODE_ENV=test node index.js",
+    "start:test": "cross-env NODE_ENV=test-local node index.js",
     "eslint": "eslint './**/*.js'"
   },
   "author": "Oskari Hyvönen",
