Troubleshoot CI backend tests not receiving repo secrets

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -33,6 +33,8 @@ jobs:
         run: npm run eslint
       - name: Run backend tests
         working-directory: ./backend
+        env:
+          TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
         run: npm test
       - name: Install E2E test dependencies
         working-directory: ./e2e-tests
