Fix CI workflow for backend tests

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -35,6 +35,7 @@ jobs:
         working-directory: ./backend
         env:
           TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
+          SECRET: ${{ secrets.SECRET }}
         run: npm run test:CI
       - name: Install E2E test dependencies
         working-directory: ./e2e-tests
