--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -42,6 +42,9 @@ jobs:
         run: npm install
       - name: Run E2E tests
         working-directory: ./e2e-tests
+        env:
+          TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
+          SECRET: ${{ secrets.SECRET }}
         run: npm test
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
