--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "test:CI": "cross-env NODE_ENV=test jest --verbose --runInBand --no-watchman",
-    "production": "cross-env NODE_ENV=production-local node --watch index.js",
+    "start:e2e-tests": "cross-env NODE_ENV=test node index.js",
+    "start:local": "cross-env NODE_ENV=production-local node --watch index.js",
     "test": "cross-env NODE_ENV=test-local jest --verbose --runInBand --no-watchman",
+    "start:e2e-tests-local": "cross-env NODE_ENV=test-local node index.js",
     "dev": "cross-env NODE_ENV=development node --watch index.js",
-    "start:test": "cross-env NODE_ENV=test-local node index.js",
     "eslint": "eslint './**/*.js'"
   },
   "author": "Oskari Hyvönen",
