--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -40,6 +40,8 @@ jobs:
       - name: Install E2E test dependencies
         working-directory: ./e2e-tests
         run: npm install
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
       - name: Run E2E tests
         working-directory: ./e2e-tests
         env:
