Fix installation of Playwright Browsers in CI workflow

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -41,6 +41,7 @@ jobs:
         working-directory: ./e2e-tests
         run: npm install
       - name: Install Playwright Browsers
+        working-directory: ./e2e-tests
         run: npx playwright install --with-deps
       - name: Run E2E tests
         working-directory: ./e2e-tests
