Fix CI pipeline E2E report upload and prepare for deployment

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:deploy": "vite build && cp -r dist ../backend",
     "eslint": "eslint './**/*.{js,jsx}'",
     "preview": "vite preview",
     "test": "vitest run"
