--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "dev": "cross-env NODE_ENV=development node --watch index.js",
     "eslint": "eslint './**/*.js'"
   },
-  "author": "Oskari Hyvönen",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.31.0",
